Bug 1200469 part 1 - Avoid using fallback cursor if from the same frame. r=tnikkel,smaug

MozReview-Commit-ID: A2Ku0TND66L

--HG--
extra : amend_source : 186b672b7e55affaf2f30a737346da5fde4aa343